--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Tamer Wesam
-logo: /portfolio/blob/main/resumepic.png
+logo: https://github.com/tamerwe/portfolio/blob/main/resumepic.png?raw=true
 show_downloads: false
 theme: jekyll-theme-minimal
